fixing layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,8 @@ button {
 header {
   background-image: url(https://hamdi4-beep.github.io/sunnyside-agency-landing-page-main/images/mobile/image-header.jpg);
   background-size: cover;
-  background-position: -50%;
+  background-repeat: no-repeat;
+  background-position-y: 50%;
   outline: 1px solid blue;
   height: 100vh;
 }
@@ -72,7 +73,7 @@ main section p {
 }
 main .content {
   display: grid;
-  padding: 4em;
+  padding: 4em 3em;
   outline: 1px solid blue;
 }
 main .content h2 {
