--- a/src/sass/globals/_header.scss
+++ b/src/sass/globals/_header.scss
@@ -3,7 +3,8 @@
 header {
     background-image: url(https://hamdi4-beep.github.io/sunnyside-agency-landing-page-main/images/mobile/image-header.jpg);
     background-size: cover;
-    background-position: -50%;
+    background-repeat: no-repeat;
+    background-position-y: 50%;
     outline: 1px solid blue;
     height: 100vh;
 
