--- a/src/sass/globals/_main.scss
+++ b/src/sass/globals/_main.scss
@@ -21,7 +21,7 @@ main {
 
     .content {
         display: grid;
-        padding: 4em;
+        padding: 4em 3em;
         outline: 1px solid blue;
 
         h2 {
